<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/general_activity_horizontal_margin"
    android:paddingTop="@dimen/general_activity_horizontal_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/divider"
        android:layout_alignParentTop="true">

        <ListView
            android:id="@+id/lstStudents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingLeft="@dimen/general_activity_horizontal_margin"
            android:paddingRight="@dimen/general_activity_horizontal_margin"
            android:scrollbarStyle="outsideOverlay"
            tools:listitem="@android:layout/simple_list_item_1" />

        <TextView
            android:id="@+id/lblEmptyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="@dimen/activity_main_lblEmptyView_drawablePadding"
            android:drawableTop="@drawable/ic_person_add_black_48dp"
            android:text="@string/main_lblEmptyView"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/general_divider_height"
        android:layout_above="@+id/btnAdd"
        android:layout_marginTop="@dimen/general_activity_horizontal_margin"
        android:background="@android:drawable/divider_horizontal_textfield" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/btnAdd"
        android:layout_below="@+id/divider"
        android:layout_marginLeft="@dimen/general_activity_horizontal_margin"
        android:layout_marginRight="@dimen/general_activity_horizontal_margin"
        android:layout_toStartOf="@+id/btnAdd"
        android:hint="@string/main_txtName"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        tools:ignore="Autofill">

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/btnAdd"
        android:layout_width="@dimen/activity_main_btnAdd_width"
        android:layout_height="@dimen/activity_main_btnAdd_width"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/general_activity_horizontal_margin"
        android:layout_marginTop="@dimen/general_activity_horizontal_margin"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/main_btnAdd"
        android:padding="@dimen/activity_main_btnAdd_padding"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_person_add_24dp"/>

</RelativeLayout>