...
            android:layout_below="@+id/lblAge"
            android:layout_marginTop="@dimen/activity_main_item_divider_marginTop"
            android:layout_toEndOf="@+id/imgPhoto"
            android:background="@color/activity_main_item_divider"/>

        <Button
            android:id="@+id/btnMarks"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_marginStart="@dimen/activity_main_item_card_padding"
            android:layout_toStartOf="@id/btnCall"
            android:text="@string/activity_main_item_btnMarks"/>

        <Button
            android:id="@+id/btnCall"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
...
